--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
         <p>
             电话15640594792，QQ号1948599762和2755336854，电子邮箱wusheng233@qq.com和wusheng23311@outlook.com
         </p>
+        <a href="https://mougou666.github.io/"><button>MOUGOU</button></a>
     </div>
 </section>
+    <a href="http://mougou666.github.io">mougou</a>
+    <a href="https://mougou666.github.io/Links.html">mougou Links</a>
 </body>
 </html>
